--- a/JS/aula47/assets/css/style.css
+++ b/JS/aula47/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 :root {
-  --primary-color: rgb(17, 86, 102);
+  --primary-color: grey;
   --primary-color-darker: rgb(9, 48, 56);
 }
 
@@ -59,4 +59,8 @@ form button:hover {
 
 .relogio{
   font-size: 3em;
+}
+
+.pausado {
+  color: grey;
 }
